More search and replace magic

--- a/specs/Makefile
+++ b/specs/Makefile
@@ -6,9 +6,9 @@ GEN_DIR=../
 # Tool reference (Go specific): https://openapi-generator.tech/docs/generators/go
 codegen: 
 	openapi-generator generate -i $(OAS3_API_SPEC) -g go -o $(GEN_DIR) -p packageName="github.com/fastah/libattio" -p useDefaultValuesForRequiredVars=true 
-	find $(GEN_DIR) -type f \( -name '*.go'  -name '*.md' -o -name '*.mod' \) -exec sed -i '' \
-  		-e 's|openapiclient|libattio|g' \
-  		-e 's|github\.com/GIT_USER_ID/GIT_REPO_ID|github.com/fastah/libattio|g' {} +
+	find $(GEN_DIR) -type f \( -name '*.go' -o -name '*.mod'  -o -name '*.md'  -o -name 'go.*' \) -exec sed -i '' \
+  -e 's|openapiclient|libattio|g' \
+  -e 's|github\.com/GIT_USER_ID/GIT_REPO_ID|github.com/fastah/libattio|g' {} +
 	cd $(GEN_DIR) && go mod tidy && go list -m -u all && go get -u -t ./... && go mod tidy 
 
 deps: 
